fixed overflow

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     border-radius: 5px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    overflow: hidden;
 }
 
 .button {
